--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#cv">CV</a></li>
         <li><a href="#problem-solving">Problem Solving</a></li>
+        <li><a href="#social">Social</a></li>
         <li><a href="#contact">Contact</a></li>
-        
+
       </ul>
     </nav>
   </header>
@@ -31,8 +32,10 @@
       <div class="about-text">
         <h2>About Me</h2>
         <p>
-          Bio <br>
-          ---------------------------<br>
+          Hello! I am Sudipto Dey Himel, a third-year Computer Science and Engineering student at Metropolitan University with a
+          strong foundation in competitive programming, data structures, and algorithms. With skills in C, C++, and
+          Python, I am eager to solve complex problems and explore full-stack development for scalable, user-friendly
+          applications.
         </p>
       </div>
     </div>
@@ -43,17 +46,18 @@
       <h2>Education</h2>
     </div>
     <div class="education-container">
-      <img src="images.PNG/MU logo.png" alt="MU" class="mu-logo"/> 
+      <img src="images.PNG/MU logo.png" alt="MU" class="mu-logo" />
       <div class="txt">
         <p>Metropolitan University, Sylhet </p>
         <p2>BSC. in Computer Science & Engineering</p2> <br>
         <p2>June 2022 - Present</p2> <br>
         <p2>Sylhet, Bangladesh</p2>
       </div>
-      <br><hr><br>
-      <img src="images.PNG/JVBS logo.jpeg" alt="MU" class="mu-logo"/> 
+      <br>
+      <hr><br>
+      <img src="images.PNG/JVBS logo.jpeg" alt="MU" class="mu-logo" />
       <div class="txt">
-        <p>Jaflong Vally Boarding School </p> 
+        <p>Jaflong Vally Boarding School </p>
         <p2>Higher Secondary</p2> <br>
         <p2>June 2018 - June 2020</p2> <br>
         <p2>Sylhet, Bangladesh</p2>
@@ -80,7 +84,7 @@
           <ul>
             <li>C++</li>
             <li>Data Structutres & Algorithms</li>
-            <li>Competitive Programming (Solved 800+ problems on various online platforms)</li>
+            <li>Competitive Programming (Solved 1000+ problems on various online platforms)</li>
           </ul>
         </div>
       </div>
@@ -101,7 +105,7 @@
       <h2>Problem Solving Activities</h2>
     </div>
 
-    <section style="display: flex; flex-direction: row; margin: 0; padding: 0; gap: 20px;">
+    <section style="display: flex; flex-direction: row; margin: 0; padding: 0; gap: 20px; justify-content: center;">
       <div class="specific-section">
         <div class="image-container">
           <img src="images.PNG/cf.jpeg" alt="codeforces" class="img">
@@ -119,15 +123,49 @@
     </section>
   </section>
 
+  <section id="social">
+    <div>
+      <h2>Let's Connect</h2>
+    </div>
+    <div
+      style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 60px; margin: 0;">
+      <a href="https://www.linkedin.com/in/sudiptodeyhimel/" target="_blank">
+        <img src="images.PNG/linkedin.png" alt="linkedin" class="set">
+      </a>
+
+      <a href="https://www.facebook.com/sudiptodeyhimel/" target="_blank">
+        <img src="images.PNG/fb.jpeg" alt="facebook" class="set">
+      </a>
+
+      <a href="https://www.instagram.com/__himu_21/" target="_blank">
+        <img src="images.PNG/insta.jpeg" alt="instagram" class="set">
+      </a>
+
+      <a href="https://github.com/sudipto-dey-himel" target="_blank">
+        <img src="images.PNG/github.png" alt="github" class="set">
+      </a>
+    </div>
+  </section>
+
   <section id="contact">
     <div class="about-text">
       <h2>Contact</h2>
-      <p>
-        If you'd like to get in touch, feel free to email me at:
-        example@example.com
-      </p>
+      <div
+        style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 60px; margin: 0;">
+        <a href="mailto:sudiptodeyhimel02@gmail.com" target="_blank"
+          style="color: rgb(249, 248, 248); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
+          Mail @ sudiptodeyhimel02@gmail.com
+        </a>
+      </div>
     </div>
   </section>
+
+  <footer>
+    <p class="hmm">Thanks for visiting my portfolio</p> <br>
+    <p><a href="https://www.linkedin.com/in/sudiptodeyhimel/" class="hmm2" target="_blank">&copy; Sudipto Dey Himel |
+        2024 </a></p>
+  </footer>
+
 </body>
 
 </html>
