--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <div class="about-text">
         <h2>About Me</h2>
         <p>
-          Hello! I am Sudipto Dey Himel, a third-year Computer Science and Engineering student at Metropolitan University with a
+          Hello! I am Sudipto Dey Himel, a third-year Computer Science and Engineering student at Metropolitan
+          University with a
           strong foundation in competitive programming, data structures, and algorithms. With skills in C, C++, and
           Python, I am eager to solve complex problems and explore full-stack development for scalable, user-friendly
           applications.
