--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <hr><br>
       <img src="images.PNG/JVBS logo.jpeg" alt="MU" class="mu-logo" />
       <div class="txt">
-        <p>Jaflong Vally Boarding School </p>
+        <p>Jaflong Valley Boarding School </p>
         <p2>Higher Secondary</p2> <br>
         <p2>June 2018 - June 2020</p2> <br>
         <p2>Sylhet, Bangladesh</p2>
@@ -80,6 +80,7 @@
             <strong>Languages: </strong>C | C++ | Python <br>
             <strong>Frontend: </strong>HTML | CSS<br>
             <strong>DevOps: </strong>Git | GitHuB <br>
+            <strong>Data Science: </strong>Matplotlib | Pandas | NumPy | Seaborn | Jupyter Notebok | Google Colab <br>
             <strong> Proficient in: </strong> <br>
           </p>
           <ul>
@@ -99,6 +100,7 @@
       <p2>will be uploaded</p2>
     </div>
   </section>
+  
 
   <section id="problem-solving">
 
@@ -111,7 +113,7 @@
         <div class="image-container">
           <img src="images.PNG/cf.jpeg" alt="codeforces" class="img">
         </div>
-        <p>Max Rating: 1037</p>
+        <p>Max Rating: 1060</p>
         <a href="http://codeforces.com/profile/sdh_02" class="hehe" target="_blank"><strong>sdh_02</strong></a>
       </div>
       <div class="specific-section">
