--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#about">About Me</a></li>
+        <li><a href="#about">About </a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#cv">CV</a></li>
         <li><a href="#problem-solving">Problem Solving</a></li>
+        <li><a href="#experience">Experience</a></li>
         <li><a href="#social">Social</a></li>
         <li><a href="#contact">Contact</a></li>
 
