--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <p>
             <strong>Languages: </strong>C | C++ | Python <br>
             <strong>Frontend: </strong>HTML | CSS<br>
-            <strong>DevOps: </strong>Git | GitHuB <br>
+            <strong>Tools: </strong>Git | GitHuB <br>
             <strong>Data Science: </strong>Matplotlib | Pandas | NumPy | Seaborn | Jupyter Notebok | Google Colab <br>
             <strong> Proficient in: </strong> <br>
           </p>
