--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <p>
           Hello! I am Sudipto Dey Himel, a third-year Computer Science and Engineering student at Metropolitan
           University with a
-          strong foundation in competitive programming, data structures, and algorithms. With skills in C, C++, and
-          Python, I am eager to solve complex problems and explore full-stack development for scalable, user-friendly
+          strong foundation in competitive programming(CP), data structures and algorithms(DSA) and basic Data Science. With skills in C, C++, and
+          Python. I am eager to solve complex problems and explore full-stack development for scalable, user-friendly
           applications.
         </p>
       </div>
@@ -121,7 +121,7 @@
         <div class="image-container">
           <img src="images.PNG/cc.png" alt="codechef" class="img">
         </div>
-        <p> Max Rating : 1428</p>
+        <p> Max Rating : 1439</p>
         <a href="https://www.codechef.com/users/sdh_21" class="hehe2" target="_blank"><strong>sdh_21</strong></a>
       </div>
     </section>
@@ -158,17 +158,11 @@
         style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 60px; margin: 0;">
         <a href="mailto:sudiptodeyhimel02@gmail.com" target="_blank"
           style="color: rgb(249, 248, 248); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
-          Mail @ sudiptodeyhimel02@gmail.com
+          sudiptodeyhimel02@gmail.com
         </a>
       </div>
     </div>
   </section>
-
-  <footer>
-    <p class="hmm">Thanks for visiting my portfolio</p> <br>
-    <p><a href="https://www.linkedin.com/in/sudiptodeyhimel/" class="hmm2" target="_blank">&copy; Sudipto Dey Himel |
-        2024 </a></p>
-  </footer>
 
 </body>
 
