--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <h2>Problem Solving Activities</h2>
     </div>
 
-    <section style="display: flex; flex-direction: row; margin: 0; padding: 0; gap: 20px; justify-content: center;">
+    <section class = 'problem-solving-container'>
       <div class="specific-section">
         <div class="image-container">
           <img src="images.PNG/cf.jpeg" alt="codeforces" class="img">
